2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/groff/groff.1.man (Installation directories): Don't
	output a tagged paragraph for the X11 application defaults
	directory if the build symbol '@APPRESDIR@' is not defined (that
	is, we didn't build with X11 support).

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_GHOSTSCRIPT_VERSION_CHECK): Fix code style
	nits.  Use lowercase for shell variables we define.  Don't quote
	literal operands to test(1) that don't contain syntactically
	shell-significant characters.  Update indentation to match
	recent practice.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_URW_FONTS_NOTICE): Don't emit the notice if
	Ghostscript isn't available, since it was a prerequisite for
	the `GROFF_URW_FONTS_CHECK` macro in the first place.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	[build]: Add print spooler determination to configuration
	report.

	* m4/groff.m4 (GROFF_PRINT): Add shell variable
	`groff_have_spooler` to house the name of the print spooler
	{"lp" or "lpr"} or the word "no".
	* configure.ac: Report determined spooler, or its absence.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/tests/do-not-seek-the-unseekable.sh: Skip
	seekability check of the standard input stream if there is no
	controlling terminal.

	Fixes <https://savannah.gnu.org/bugs/?62506>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>

	* m4/groff.m4 (GROFF_CHECK_GROHTML_PROGRAMS): Migrate from
	`AC_FOREACH` to `m4_foreach` to avoid obsolescence warning from
	GNU Autoconf 2.70 or later.

	Fixes <https://savannah.gnu.org/bugs/?61059>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-22  G. Branden Robinson <g.branden.robinson@gmail.com>

	* man/groff.7.man: Rename "pilot" list macros for man(7) from